2005-12-11  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java (context): New field.
	(getResourceContext, setResourceContext, findResource): New methods.

2005-11-23  Per Bothner  <per@bothner.com>

	* ClassType.java (getOuterLinkType): New method.
	(setOuterLink): Change to return link Field instead of void.

2005-11-22  Per Bothner  <per@bothner.com>

	* ClassType.java (getField): New method, takes mask.
	(getField): Old method now just calls new method.
	(addFields): Now add all fields, not just public|protected ones.
	(addmethods): Likewise.
	(getMethod): Only match public methods.

	* ClassType.java (addMethod): Reimplement using shared code.

2005-11-21  Per Bothner  <per@bothner.com>

	* ObjectType.java (HAS_OUTER_LINK): New flag,
	* ClassType.java (hasOuterLink, setOuterLink): New methods.
	(addField): Set HAS_OUTER_LINK if "this$0" field seen.
	(getDeclaredMethod): Adjust if hasOuterLink().
	* Method.java (signature): Make non-private so ClassType can clear it.

2005-11-16  Per Bothner  <per@bothner.com>

	* ClassType.java (getPackageName): Fix thinko.

2005-11-14  Per Bothner  <per@bothner.com>

	* ClassType.java (getMethod): Also search implemented interfaces.

2005-10-27  Per Bothner  <per@bothner.com>

	* ClassType.java (getSuperclass): Only getReflectClass() if isExisting.

2005-10-16  Per Bothner  <per@bothner.com>

	* ClassType.java (isAccessible): Fix thinko.

	* CodeAttr.java (castNeeded): New static hekp method that handles
	ArrayTypes as well as ClassTypes.
	(emitCheckcast): Make use of castNeeded.

2005-09-25  Per Bothner  <per@bothner.com>

	* Type.java (make): Remove redundant statement.

2005-07-28  Dean Ferreyra <dean@octw.com>

	* ClassType.java (getInterfaces): Add missing needed synchornized.

2005-05-30  Per Bothner  <per@bothner.com>

	* Variable.java (isArtificial, setArtificial): Remove unused methods.
	(ARTIFICIAL_FLAG): Remove unused constant.

2005-05-16  Per Bothner  <per@bothner.com>
